--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -8,6 +8,7 @@
     "airbnb-base",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:import/typescript",
     "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
@@ -17,7 +18,7 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2018,
+    "ecmaVersion": 11,
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
