--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "lint": "eslint --ext .ts .",
+    "start": "node build/src/index.js"
   },
   "author": "Liam Wears",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
     "@types/supertest": "^2.0.9",
+    "@types/topojson": "^3.2.2",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "eslint": "^6.8.0",
@@ -21,7 +25,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "jest": "^25.4.0",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
     "ts-jest": "^25.5.1",
@@ -29,10 +33,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@types/cors": "^2.8.6",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "uuid": "^8.0.0"
+    "express": "^4.17.1"
   }
 }
