--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts .",
-    "start": "node build/src/index.js"
+    "start": "node build/index.js"
   },
   "author": "Liam Wears",
   "license": "ISC",
