--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-client": "cd client && npm run build",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "start-client": "cd client && npm start",
-    "start": "node ./server/build/src/index.js"
+    "start": "node ./server/build/index.js"
   },
   "repository": {
     "type": "git",
