--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "prestart": "npm run build",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts .",
-    "start": "node build/index.js"
+    "start": "node build/index.js",
+    "build": "tsc"
   },
   "author": "Liam Wears",
   "license": "ISC",
