--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -4,12 +4,8 @@
         "es6": true
     },
     "extends": [
-        "airbnb",
         "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended",
-        "prettier/react",
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
+        "airbnb"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -18,10 +14,7 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
-            "jsx": true,
-            "tsx": true,
-            "ts":   true,
-            "js": true
+            "jsx": true
         },
         "ecmaVersion": 11,
         "sourceType": "module"
@@ -30,28 +23,6 @@
         "react",
         "@typescript-eslint"
     ],
-    "settings": {
-        "import/resolver": {
-          "node": {
-            "extensions": [".js", ".jsx", ".ts", ".tsx"],
-            "moduleDirectory": ["node_modules", "./src"]
-          }
-        }
-    },
     "rules": {
-        "prettier/prettier": ["error", { "singleQuote": true }],
-        "@typescript-eslint/explicit-function-return-type": 0,
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
-        "import/extensions": [
-            "error",
-            "ignorePackages",
-            {
-              "js": "never",
-              "jsx": "never",
-              "ts": "never",
-              "tsx": "never"
-            }
-          ],
-          "react/prop-types": 0
     }
 }
